Remove insult message and update footer text for clarity

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </main>
 
         <footer>
-            <p>A hilarious prank version 😈</p>
+            <p>Do you know your Pokémon? 😈</p>
         </footer>
     </div>
 
